--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,9 +6,11 @@
     <string name="signup">Sign up</string>
     <string name="login">Login</string>
     <string name="username">Username</string>
-    <string name="personal_info" >Личная информация</string>
+    <string name="personal_info">Личная информация</string>
     <string name="phone">Телефон</string>
 
     <string name="friends">Друзья</string>
     <string name="places">Мои места</string>
+    <string name="friends2">Друзей</string>
+    <string name="add">Добавить в друзья</string>
 </resources>
