--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -12,6 +12,7 @@
     <string name="places">My places</string>
     <string name="friends2">Friends</string>
     <string name="add">Add to friends</string>
+    <string name="adress">Address</string>
 
 
 </resources>
