--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,5 @@
     <string name="places">Мои места</string>
     <string name="friends2">Друзей</string>
     <string name="add">Добавить в друзья</string>
-    <string name="adress">Адрес</string>
+    <string name="address">Адрес</string>
 </resources>
