--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -13,6 +13,7 @@
     <string name="friends2">Friends</string>
     <string name="add">Add to friends</string>
     <string name="address">Address</string>
+    <string name="add_time">Add</string>
 
 
 </resources>
