--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="friends2">Друзей</string>
     <string name="add">Добавить в друзья</string>
     <string name="address">Адрес</string>
+    <string name="add_time">Добавить</string>
 </resources>
