--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,8 @@
     <string name="add">Добавить в друзья</string>
     <string name="address">Адрес</string>
     <string name="add_time">Добавить</string>
+    <string name="wrong">Неверный логин или пароль</string>
+    <string name="already">Такой пользователь уже зарегистрирован</string>
+    <string name="added">Добавлен</string>
+    <string name="diff">Пароли отличаются</string>
 </resources>
